--- a/index.html
+++ b/index.html
@@ -32,6 +32,29 @@
     .lang-switch{display:flex;gap:6px;margin-left:12px}
     .lang{border:1px solid rgba(15,31,58,.25);background:transparent;color:var(--ink);padding:6px 10px;border-radius:8px;font-size:12px;cursor:pointer}
     .lang.active{background:var(--ink);color:#fff;border-color:var(--ink);font-weight:700}
+    /* Mobile menu */
+.menu-toggle{
+  display:none; margin-left:10px;
+  border:1px solid rgba(15,31,58,.25);
+  background:#fff; padding:6px 10px; border-radius:8px; cursor:pointer;
+}
+
+/* На мобильных показываем кнопку и прячем меню в выпадающий блок */
+@media (max-width:900px){
+  header .row{align-items:flex-start}
+
+  /* Прячем навигацию по умолчанию и показываем как карточку при открытии */
+  nav{
+    display:none;
+    position:absolute; right:24px; top:96px; /* при необходимости подправьте top */
+    background:#fff; border:1px solid var(--line); border-radius:12px;
+    box-shadow:0 10px 24px rgba(15,31,58,.12); padding:10px 12px; z-index:30;
+  }
+  nav a{display:block; margin:6px 0; color:var(--ink)}
+
+  .menu-toggle{display:inline-block}
+  header.open nav{display:block}
+}
 
     .hero{padding:88px 0 64px;border-bottom:1px solid var(--line);background:linear-gradient(180deg,#ffffff 0%,#f8f9fc 100%)}
     .hero h1{font-size:40px;line-height:1.15;margin:0 0 10px;color:var(--ink)}
@@ -97,6 +120,7 @@
         <a href="#kontakt" data-i18n="nav.contact">Kontakt</a>
         <a href="#faq" data-i18n="nav.faq">FAQ</a>
       </nav>
+      <button class="menu-toggle" aria-label="Menü">☰</button>
       <div class="lang-switch">
         <button class="lang active" data-setlang="de">DE</button>
         <button class="lang" data-setlang="en">EN</button>
@@ -249,6 +273,14 @@
   function applyLang(lang){ document.documentElement.lang = lang; document.querySelectorAll('[data-i18n]').forEach(el=>{ const key = el.getAttribute('data-i18n'); if(dict[lang] && dict[lang][key]) el.textContent = dict[lang][key]; }); const L = lists[lang]; if(L){ const map = { '#b2c-list':'b2c','#b2b-list':'b2b','#p-apo':'p_apo','#p-pol':'p_pol','#p-acc':'p_acc','#p-gmbh':'p_gmbh','#p-comp':'p_comp','#p-vip':'p_vip' }; Object.entries(map).forEach(([sel,key])=>{ const node=document.querySelector(sel); if(node && L[key]) node.innerHTML=L[key]; }); } const langSel=document.getElementById('lang-select'); if(langSel){ const opts={de:'Deutsch',en:'English',ru:'Русский'}; langSel.innerHTML=`<option>${opts.de}</option><option>${opts.en}</option><option>${opts.ru}</option>`; } document.querySelectorAll('.lang').forEach(b=>b.classList.toggle('active', b.dataset.setlang===lang)); }
   applyLang('de');
   document.querySelectorAll('[data-setlang]').forEach(b=>b.addEventListener('click',()=>applyLang(b.dataset.setlang)));
+</script>
+  <script>
+  const btn = document.querySelector('.menu-toggle');
+  if (btn) {
+    btn.addEventListener('click', () => {
+      document.querySelector('header').classList.toggle('open');
+    });
+  }
 </script>
 </body>
 </html>
