--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
 .legal h2{margin:0 0 12px}
 .legal p{margin:10px 0}
 footer a{color:var(--muted); text-decoration:underline}
+    /* Compact legal */
+.legal{max-width:720px;padding:16px;font-size:14px}
+.legal h2{font-size:20px;margin:0 0 8px}
+.legal p{margin:8px 0}
 
   </style>
 </head>
