--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@ if(form){
         headers:{'Accept':'application/json'}
       });
       if(r.ok){
-        document.getElementById('form-status').style.display='block';
-        form.reset();
+  window.location.href='thanks.html'; // редирект на страницу “Спасибо”
+}
       }else{
         alert('Fehler beim Senden. Bitte versuchen Sie es später erneut.');
       }
