--- a/index.html
+++ b/index.html
@@ -314,24 +314,49 @@ footer a{color:var(--muted); text-decoration:underline}
 </script>
   <script>
 const form = document.querySelector('form[action^="https://formspree.io/f/"]');
-if(form){
-  form.addEventListener('submit', async (e)=>{
+if (form) {
+  const submitBtn = form.querySelector('button[type="submit"]');
+  const statusEl  = document.getElementById('form-status');
+
+  form.addEventListener('submit', async (e) => {
     e.preventDefault();
-    const data = new FormData(form);
-    try{
+
+    // спрячем статус и заблокируем кнопку
+    if (statusEl) statusEl.style.display = 'none';
+    let origText = '';
+    if (submitBtn) {
+      origText = submitBtn.textContent;
+      submitBtn.disabled = true;
+      submitBtn.textContent = 'Senden…';
+    }
+
+    try {
       const r = await fetch(form.action, {
-        method:'POST',
-        body:data,
-        headers:{'Accept':'application/json'}
+        method: 'POST',
+        body: new FormData(form),
+        headers: { 'Accept': 'application/json' }
       });
-      if(r.ok){
-  window.location.href='thanks.html'; // редирект на страницу “Спасибо”
-}
-      }else{
-        alert('Fehler beim Senden. Bitte versuchen Sie es später erneut.');
+
+      if (r.ok) {
+        // успешная отправка — на страницу благодарности
+        window.location.href = 'thanks.html';
+        return;
       }
-    }catch(e){
+
+      // показать текст ошибки Formspree (если есть)
+      const data = await r.json().catch(() => ({}));
+      const msg = (data.errors && data.errors[0] && data.errors[0].message)
+        || 'Fehler beim Senden. Bitte versuchen Sie es später erneut.';
+      alert(msg);
+
+    } catch (err) {
       alert('Netzwerkfehler. Bitte versuchen Sie es später erneut.');
+    } finally {
+      // вернуть кнопку в нормальное состояние
+      if (submitBtn) {
+        submitBtn.disabled = false;
+        submitBtn.textContent = origText || 'Anfrage senden';
+      }
     }
   });
 }
